...
                }

                Column(
                    verticalArrangement = Arrangement.spacedBy(16.dp, Alignment.CenterVertically),
                    horizontalAlignment = Alignment.CenterHorizontally
                ) {
                    HomeGameButton("QUESTS", onNavigateToQuest, isDarkMode = isDarkMode)
                    HomeGameButton("STATISTICS", onNavigateToStatistics, isDarkMode = isDarkMode)

                    if (selectedAdventureId != null && selectedAdventureId > 0) {
                        OutlinedText("selected adventure: $selectedAdventureId", textColor = Color.White, outlineColor = Color.Black)
                        val isCompleted = uiState.adventureStatuses[selectedAdventureId] == SessionStatus.COMPLETED
                        if (isCompleted) {
                            HomeGameButton("Adventure completed", {}, enabled = false)
                        } else {
                            HomeGameButton(
                                text = if (uiState.readyToPlay) "PLAY" else "Loading Quest...",
                                { onNavigateToGame(selectedAdventureId) },
                                isDarkMode = isDarkMode,
                                enabled = uiState.readyToPlay
                            )
                        }
                    } else {
                        HomeGameButton("Select an adventure to play", {}, enabled = false)
                    }
                }
            }

            // Dev Panel Button at the bottom right
            if (BuildConfig.DEV_MODE) {
...
) {
    AlertDialog(
        onDismissRequest = { /* Dialog cannot be dismissed without input */ },
        title = { Text("Welcome to Tartu Explorer!") },
        text = {
            Column {
                Text("Please enter your name to begin.")
                TextField(
                    value = playerName,
                    onValueChange = onPlayerNameChange,
                    singleLine = true,
                    placeholder = { Text("Your Name") }
                )
            }
        },
        confirmButton = {
            Button(
                onClick = onSave,
                enabled = playerName.isNotBlank() // Button only enabled when text is entered
            ) {
                Text("Save")
            }
        }
    )
}


...
