...
        )
    }

    suspend fun riversideWalk(adventureDao: AdventureDao, questDao: QuestDao, hintDao: HintDao) {
        val adventure = adventureDao.insertAdventure(
            AdventureEntity(
                title = "Riverside-Walk",
                description = "You start at Delta and explore your surrounding along a short walk next to the river",
                difficulty = AdventureDifficulty.EASY,
                estimatedDuration = 30,
                thumbnailPath = "https://raw.githubusercontent.com/UT-EE-Mobile-App-Development/tartu-explorer-quests/refs/heads/main/art/3/2.jpg"
            )
        )
...
